--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
 	"devDependencies": {
 		"concurrently": "^5.1.0"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"axios": "^0.24.0",
+		"bootstrap": "^5.1.3"
+	}
 }
