--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
