--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@apollo/react-hooks": "^3.1.5",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
@@ -13,7 +14,7 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
     "bootstrap": "^5.1.3",
-    "graphql": "^15.0.0",
+    "graphql": "^15.8.0",
     "graphql-tag": "^2.10.3",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
